--- a/.github/workflows/.github-ci.yml
+++ b/.github/workflows/.github-ci.yml
@@ -1,10 +1,10 @@
-# 静的コンテンツを GitHub Pages にデプロイするためのシンプルなワークフロー
-name: Deploy static content to Pages
+name: Get new articles / Deploy static content to Pages
 
 on:
-  # デフォルトブランチを対象としたプッシュ時にで実行されます
   push:
     branches: ["main"]
+  # schedule:
+  #   - cron: "0 * * * *"
 
   # Actions タブから手動でワークフローを実行できるようにします
   workflow_dispatch:
@@ -21,7 +21,23 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  # デプロイするだけなので、単一のデプロイジョブ
+  # run python and update articles
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.10"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - name: run python
+        run: python ./python/get_articles.py
+
+  # page build
   deploy:
     environment:
       name: github-pages
@@ -44,7 +60,6 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          # dist リポジトリのアップロード
           path: "./dist"
       - name: Deploy to GitHub Pages
         id: deployment
