--- a/.github/workflows/.github-ci.yml
+++ b/.github/workflows/.github-ci.yml
@@ -1,10 +1,10 @@
 name: Get new articles / Deploy static content to Pages
 
 on:
-  push:
-    branches: ["main"]
-  # schedule:
-  #   - cron: "0 * * * *"
+  # push:
+  #   branches: ["main"]
+  schedule:
+    - cron: "*/10 * * * *"
   workflow_dispatch:
 
 permissions:
@@ -33,10 +33,20 @@ jobs:
       - name: run python
         run: python ./python/get_articles.py
 
+  # auto commit
+  auto-commit:
+    runs-on: ubuntu-latest
+    needs: update-articles
+    permissions:
+      contents: write
+    steps:
+      - uses: actions/checkout@v4
+      - uses: stefanzweifel/git-auto-commit-action@v5
+
   # page build
   page-build:
     runs-on: ubuntu-latest
-    needs: update-articles
+    needs: auto-commit
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
