--- a/.github/workflows/.github-ci.yml
+++ b/.github/workflows/.github-ci.yml
@@ -1,4 +1,4 @@
-name: Get new articles / Deploy static content to Pages
+name: get new articles & deploy static page
 
 on:
   # push:
@@ -20,6 +20,8 @@ jobs:
   # run python and update articles
   update-articles:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python 3.10
@@ -32,21 +34,12 @@ jobs:
           pip install -r requirements.txt
       - name: run python
         run: python ./python/get_articles.py
-
-  # auto commit
-  auto-commit:
-    runs-on: ubuntu-latest
-    needs: update-articles
-    permissions:
-      contents: write
-    steps:
-      - uses: actions/checkout@v4
       - uses: stefanzweifel/git-auto-commit-action@v5
 
-  # page build
+  # build page for publish
   page-build:
     runs-on: ubuntu-latest
-    needs: auto-commit
+    needs: update-articles
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
