--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@rollup/plugin-dsv": "^3.0.4",
-    "vue": "^3.3.11"
+    "vue": "^3.3.11",
+    "vuetify": "^3.4.8"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
